--- a/app.html
+++ b/app.html
@@ -5,11 +5,10 @@
     <title ng-bind="title"></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
     <link rel="stylesheet" href="css/weui.min.css">
     <link rel="stylesheet" href="css/ani.css">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.css" />
 </head>
 <body>
 
@@ -25,7 +24,8 @@
     <script src="js/route.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/service.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=BPkYRZt8CNTKtQyqmWetWOGW"></script>
-     <script type="text/javascript" src="http://api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
+    <script src="//at.alicdn.com/t/font_p40934o4hr3mzpvi.js"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=BPkYRZt8CNTKtQyqmWetWOGW"></script>
+    <script type="text/javascript" src="//api.map.baidu.com/library/SearchInfoWindow/1.5/src/SearchInfoWindow_min.js"></script>
 </body>
 </html>
